# bert-finance-sentiment

./: .gitignore  README.md  encore_sentiment.ipynb  main.py  pyproject.toml  scrape.py  sentiment.py
notebooks/: encore_sentiment.ipynb  quant_sentiment.ipynb  sentiment_analysis.ipynb
scraper/: base.py  run.py  utils.py
scraper/src/: alaska.py  alpha_key.py  artica.py  dahlia.py  dahlia_urls.txt  dynamo.py  encore.py  genoa.py  guepardo.py  ip_capital.py  kapitalo.py  mar_asset.py  squadra.py
scrapers/: __init__.py  base.py  encore.py  guepardo.py  ip_capital.py  loader.py  mar_asset.py
services/: database.py  extractor.py  loader.py  models.py  transcribe.py
src/: Dockerfile  inference.py  merge_lora.py  preprocess.py  train_cls.py  train_domain.py
src/domain/: train.py
tests/: test_scrapers.py
