[project]
name = "llm-asset-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "deepmultilingualpunctuation>=1.0.1",
    "ipykernel>=6.29.5",
    "pypdf>=5.3.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
    "youtube-transcript-api>=0.6.3",
]
