[project]
name = "llm-asset-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pypdf>=5.3.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "youtube-transcript-api>=0.6.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "torchvision-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
